// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldArrayAndWizard /> Render field-array after push user (store Step2) 1`] = `
Object {
  "form": Object {
    "activeField": "",
    "blurred": false,
    "changed": true,
    "errorsMap": Object {
      "groupName": "Field required.",
    },
    "focused": false,
    "hasErrors": true,
    "hasWarnings": false,
    "submitted": true,
    "warningsMap": Object {},
  },
  "meta": Object {
    "groupName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "Field required.",
      "focused": false,
      "warning": "",
    },
    "users": Array [
      Object {
        "about": Object {
          "hobby": Object {
            "active": false,
            "blurred": false,
            "changed": true,
            "error": "",
            "focused": false,
            "warning": "",
          },
        },
        "firstName": Object {
          "active": false,
          "blurred": false,
          "changed": true,
          "error": "",
          "focused": false,
          "warning": "",
        },
        "secondName": Object {
          "active": false,
          "blurred": false,
          "changed": true,
          "error": "",
          "focused": false,
          "warning": "",
        },
      },
      Object {
        "about": Object {
          "hobby": Object {
            "active": false,
            "blurred": false,
            "changed": true,
            "error": "",
            "focused": false,
            "warning": "",
          },
        },
        "firstName": Object {
          "active": false,
          "blurred": false,
          "changed": true,
          "error": "",
          "focused": false,
          "warning": "",
        },
        "secondName": Object {
          "active": false,
          "blurred": false,
          "changed": true,
          "error": "",
          "focused": false,
          "warning": "",
        },
      },
    ],
  },
  "values": Object {
    "groupName": undefined,
    "users": Array [
      Object {
        "about": Object {
          "hobby": "test about hobby 0",
        },
        "firstName": "test first name 0",
        "friends": Array [],
        "id": 0,
        "secondName": "test second name 0",
      },
      Object {
        "about": Object {
          "hobby": "test about hobby 1",
        },
        "firstName": "test first name 1",
        "friends": Array [],
        "id": 1,
        "secondName": "test second name 1",
      },
    ],
  },
}
`;

exports[`<FieldArrayAndWizard /> Render field-array after push user (store wizard) 1`] = `
Object {
  "values": Object {
    "groupName": undefined,
    "step1Input": "test first name 0",
    "users": Array [
      Object {
        "about": Object {
          "hobby": "test about hobby 0",
        },
        "firstName": "test first name 0",
        "friends": Array [],
        "secondName": "test second name 0",
      },
      Object {
        "about": Object {
          "hobby": undefined,
        },
        "firstName": "test first name 1",
        "friends": Array [],
        "secondName": "test second name 1",
      },
    ],
  },
  "wizard": Object {
    "errorsMap": Object {
      "groupName": "Field required.",
      "users": Array [
        undefined,
        Object {
          "about": Object {
            "hobby": "Field required.",
          },
        },
      ],
    },
    "hasErrors": true,
    "hasWarnings": false,
    "warningsMap": Object {},
  },
}
`;

exports[`<FieldArrayAndWizard /> Render field-array form (inputs). 1`] = `
<input
  name="step1Input"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  type="text"
  value=""
/>
`;

exports[`<FieldArrayAndWizard /> Render field-array form (store Step1) 1`] = `
Object {
  "form": Object {
    "activeField": "",
    "blurred": false,
    "changed": false,
    "errorsMap": Object {},
    "focused": false,
    "hasErrors": false,
    "hasWarnings": false,
    "submitted": false,
    "warningsMap": Object {},
  },
  "meta": Object {
    "step1Input": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "step1Input": undefined,
  },
}
`;

exports[`<FieldArrayAndWizard /> Store field-array submit Step1 (inputs) 1`] = `
<input
  name="groupName"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  type="text"
  value=""
/>
`;

exports[`<FieldArrayAndWizard /> Store field-array submit Step1 (store) 1`] = `
Object {
  "form": Object {
    "activeField": "",
    "blurred": false,
    "changed": true,
    "errorsMap": Object {},
    "focused": false,
    "hasErrors": false,
    "hasWarnings": false,
    "submitted": true,
    "warningsMap": Object {},
  },
  "meta": Object {
    "step1Input": Object {
      "active": false,
      "blurred": false,
      "changed": true,
      "error": "",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "step1Input": "test first name 0",
  },
}
`;
